infra/charts/minio/manifests/api-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
      sectionName: websecure
  hostnames:
    - minio-api.o11y.local
  rules:
    - backendRefs:
        - name: minio
          port: 9000
