infra/charts/minio/manifests/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
      sectionName: websecure
  hostnames:
    - minio.o11y.local
  rules:
    - backendRefs:
        - name: minio-console
          port: 9001
